# ChangeLog for media-gfx/ipe
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  10 Sep 2007; Christian Schlotter (schlotter) <again@gmx.de>
  ipe-6.0_pre28.ebuild:
  Correct last commit which included wrong paths to configuration files.

  10 Sep 2007; Christian Schlotter (schlotter) <again@gmx.de>
  ipe-6.0_pre28.ebuild:
  Fix compilation with GCC 4.2. Thanks to James Cloos in bug #80448.

  04 Aug 2007; Jakub Moc <jakub@gentoo.org> ipe-6.0_pre28.ebuild:
  Drop redundant die, use pkg_setup from qt4 eclass for built_with_use check

  04 Aug 2007; Jakub Moc <jakub@gentoo.org> ipe-6.0_pre28.ebuild:
  Use eqmake4 from qt4 eclass

  01 Jul 2007; Jakub Moc <jakub@gentoo.org> ipe-6.0_pre28.ebuild:
  Use full path to qmake

  10 May 2007; Christian Schlotter (schlotter) <again@gmx.de>
  ipe-6.0_pre28.ebuild:
  Change HOMEPAGE and SRC_URI back to original values. They were just changed
  temporarily.

  08 May 2007; Christian Schlotter (schlotter) <again@gmx.de>
  ipe-6.0_pre28.ebuild:
  Set HOMEPAGE and SRC_URI variable to current homepage.

  03 Apr 2007; Christian Schlotter (schlotter) <again@gmx.de>
  ipe-6.0_pre28.ebuild:
  Keyworded ~amd64. Thanks to Christoph Lange in bug #80448.

  22 Mar 2007; Christian Faulhammer <opfer@gentoo.org> ipe-6.0_pre28.ebuild:
  add a check for USE=qt3support with x11-libs/qt-4.2 and later

  11 Jan 2007; Jakub Moc <jakub@gentoo.org> ipe-6.0_pre28.ebuild:
  Fix src_compile; cosmetics

  11 Jan 2007; Christian Schlotter (schlotter) <again@gmx.de>
  ipe-6.0_pre28.ebuild:
  correct HOMEPAGE variable (see http://tinyurl.com/yl4rcj for announcement of
  change)

  10 Jan 2007; Christian Schlotter (schlotter) <again@gmx.de>
  ipe-6.0_pre28.ebuild:
  make IFS variable local (inspired by http://tinyurl.com/yn7rga)

  09 Jan 2007; Christian Faulhammer <opfer@gentoo.org> ipe-6.0_pre28.ebuild:
  handle IFS variable a bit better so Portage won't complain a QA issue
