@@ -1,4 +1,4 @@
-DIST ipe-6.0pre28-src.tar.gz 960391 RMD160 83efafe9bf07646dc95b289629f97bd09f55e0d5 SHA1 81570659309727e95b83a9a2d00d34dac255cd07 SHA256 f567973352400d2a4fddda3e5e724bf05ede1e5f6ab9e6b91cbf79c472566e55
-EBUILD ipe-6.0_pre28.ebuild 2275 RMD160 a95dd96b4c61f0b362c14240c24ef43aa5f6066f SHA1 71a641cb6be453e6b2bded159dec79a7b9e407eb SHA256 bd64e97b0ca99b4f2402f14d98a4b660483c1c39ecd97f13b2f78b399dbf2e0a
-MISC ChangeLog 2255 RMD160 86c90b8980b5cc52c2deb170ec38f40ed6590bd3 SHA1 76920b08d2a2baf072742acfee20d1a710965241 SHA256 95e63c931e07cf5979267025e404cb937b7308aa9cd3fb5d4b934f3a042528b5
+DIST ipe-6.0pre28-patch1-src.tar.gz 955121 RMD160 907ed64fba275c85cb9eeee78f9ee8805aadb6ce SHA1 1762955909981da4d1423336ef88332a85967065 SHA256 f4613d84e2b6ce07f9b662c6f1b4390af6118d77606053d8d2f764d02d5bd588
+EBUILD ipe-6.0_pre28.ebuild 2283 RMD160 5c8d42f77f9989bab62368d4e1d731f1ced6983b SHA1 4fe1981efe891459c72de68a694706c0b23b90ec SHA256 69d4546fa3554a0a6ebbdc4d42860720ed08d7d2c4fbdf874f6582e39a0aeb93
+MISC ChangeLog 2444 RMD160 0286ac27bd9a75428a0ee1d3c530161f757a47df SHA1 7d621ee938b64354fe4109fa8524a95566b25c1a SHA256 86ee8b75a90f4e8919b18bde2bdf1456dd72b83b0b6bd2258dcdeb48ef807c41
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
